@@ -1,5 +1,5 @@
 DIST canto-0.4.3.tar.gz 26240 RMD160 69de92edd51e29c9c389cfac99049c4173e944af SHA1 75b851bb6bf3b6f9aff6a026768d2b39b2ad49cf SHA256 f83d5ea0820fa695b7f6b19508d31b2be1f89601826222d56d8d78600baaa82e
-EBUILD canto-0.4.3.ebuild 572 RMD160 8fbd6544eea7a037bbc22fc4ef44ecb4606942dd SHA1 2f4a16c0e97cedc098705f63ca8a96737085985b SHA256 43e4354f1e5a909749bc6e71d18d89d7a05acf2b5f4343f5a4b437840811d303
-EBUILD canto-9999.ebuild 381 RMD160 4693bec570af38994cd528092947419a836dad37 SHA1 c5bcd3038229bbf85ea618d74e2fc5479d658eb9 SHA256 f30c13050ba039425f3c5fd3447c460f63f73a155b8c7baabfaeb3916aae306c
-MISC ChangeLog 1171 RMD160 23075504fd9ef846a3cc2171a893b6482566fbc9 SHA1 eed4587322983b2fd40908f49f91791f95f3fb0a SHA256 198bb8527c8403cfb3c13f919d2a95b466bea71180ef6a06e2e3b60ba6093f17
+EBUILD canto-0.4.3-r1.ebuild 814 RMD160 3f3365c134685fca3d68e8c89f74a2094c2260b4 SHA1 9db3c47582759bd3e66db65de578f25b830449e0 SHA256 2ecf2fedede8ab9be9782fedc58a84c8bb247ccbebc865f08f60f3ce9a1fc19c
+EBUILD canto-9999-r1.ebuild 623 RMD160 8eb7f47383e955663d1918836ff66a29267da498 SHA1 e072b7abf043f3f6130e8aa4034ddbb0c81dc82e SHA256 e440e5813eae6e6699dd0b5d2686c11b2868f2fb6a12387c069b7e995c5c8044
+MISC ChangeLog 1347 RMD160 9a2b2924766342763c15bf9029e473a4d5266b60 SHA1 fe9b5879d11bc689745d965d817552bac864d2d6 SHA256 1956a37f2976cb353a1a5fd04c5707d8b1c1216b58eb76e6960f6e77708555eb
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
