@@ -16,6 +16,14 @@ IUSE=""
 
 DEPEND="sys-libs/ncurses"
 
+src_install() {
+	sed -i "s:SETUPPY_SET_MAN_PATH:\"\":g" "${S}/canto/cfg.py" || die
+	sed -i "s:SETUPPY_SET_BIN_PATH:\"/usr/bin/\":g" "${S}/canto/cfg.py" || die
+	sed -i "s:/canto.1:canto:g" "${S}/canto/gui.py" || die
+
+	distutils_src_install
+}
+
 pkg_postinst() {
 	ewarn "NOTE: If you're updating from a previous version canto <= 0.4.1"
 	ewarn "you must 'rm -rf ~/.canto/feeds' as the on-disk format has"
