@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Aug 2008; Jack Miller (TheMoken) <jack@codezen.org>
+  -canto-0.4.3.ebuild, +canto-0.4.3-r1.ebuild, -canto-9999.ebuild,
+  +canto-9999-r1.ebuild:
+  Add proper sed scripts.
+
   28 Jul 2008; Jack Miller (TheMoken) <jack@codezen.org>
   -canto-0.4.2.ebuild, +canto-0.4.3.ebuild:
   Version bump.
